# src/controllers/activityController.js
@@ -1,4 +1,4 @@
-import { listUserActivities } from '../services/activityService.js';
+import { listUserActivities, detailUserActivity } from '../services/activityService.js';
 import { DEFAULT_LIMIT } from "../config/constants.js";
 /*
  페이지네이션을 처리하는 컨트롤러
@@ -11,13 +11,21 @@ export const getUserActivities = async (req, res) => {
     const result = await listUserActivities(page, limit, email);
     res.status(200).json(result);
   } catch (error) {
-    console.error('getUserActivities error →', error);
-    res.status(500).json({ error: '활동 목록 조회 중 오류 발생' });
+      console.error('getUserActivities error', error);
+      res.status(500).json({ error: '활동 목록 조회 중 오류 발생' });
   }
 };
 
 export const getDetailUserActivities = async (req, res) =>
 {
-
+  try {
+    const { activityId } = req.params;
+    const email = req.email;
+    const result = await detailUserActivity(activityId, email);
+    res.status(200).json(result);
+  } catch (error) {
+      console.error("getDetailUserActivities error", error);
+      res.status(500).json({ error: '더보기 조회 중 오류 발생' });
+  }
 }
 
